[tool.poetry]
name = "jonyzambrano01"
version = "0.1.0"
description = ""
authors = ["Jony Zambrano <jonyzambrano01@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.10"
gitlint = "=0.17.0"
pre-commit = "^2.18.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
